--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,6 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.google.code.gson:gson:2.8.5'
     implementation files('/Users/administrator/Library/Android/sdk/vuforia-sdk-android-7-1-34/build/java/vuforia/Vuforia.jar')
 }
